--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="grid-container" >
 
         <header class="header-grid">
-            <img class="header-pic" src="pics/poster.png" alt="">
+            <video class="header-pic" src="video/4897208-hd_1920_1080_30fps.mp4" autoplay loop></video>
 
-                <a href=""><img class="button" src="icons/menu_24dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt="menu button"></a>
+                <a href=""><img class="button" src="icons/menu_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png"alt="menu button"></a>
             
         </header>
         
