--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <audio src="Rick Astley - Never Gonna Give You Up (Official Music Video).mp3" autoplay loop ></audio>
     <div class="grid-container" >
 
         <header class="header-grid">
-            <video class="header-pic" src="video/4897208-hd_1920_1080_30fps.mp4" autoplay loop></video>
+            <video class="header-pic" src="video/4897208-hd_1920_1080_30fps.mp4" autoplay loop muted ></video>
 
                 <a href=""><img class="button" src="icons/menu_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png"alt="menu button"></a>
             
